# cookiecutter-sb

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cookiecutter-helper.sh  cookiecutter.json  mkdocs.yml  tox.ini
.github/workflows/: main.yml
docs/: index.md  prompt_arguments.md  tutorial.md
docs/features/: codecov.md  justfile.md  linting.md  mkdocs.md  publishing.md
hooks/: post_gen_project.py
tests/: test_cookiecutter.py  test_generated_project_root.py
{{cookiecutter.project_name}}/: CONTRIBUTING.md  Justfile  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/.github/workflows/: main.yml
{{cookiecutter.project_name}}/notebooks/: Justfile  _quarto.yml  index.qmd  md_example.ipynb  py_example.ipynb
